...
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
...
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:clickable="false"
                    android:textColorHint="@color/dnBlue">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
...
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/dnBlue">

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray"
                        android:hint="@string/pass"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:translationY="-5dp"
                        tools:ignore="UnusedAttribute" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/dnBlue"
                    android:text="@string/login"
...
