<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_profile_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout_imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:background="@drawable/gradient_bcg"
        android:layout_marginTop="3dp">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:contentDescription=""
            tools:ignore="ContentDescription"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayout_imageView"
        android:gravity="center_horizontal"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/txtView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/dnBlue"
            android:layout_alignStart="@+id/user_profile_txtName"/>

        <EditText
            android:id="@+id/user_profile_txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="LabelFor"
            android:backgroundTint="@color/gray"
            android:enabled="false"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/user_profile_txtName"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="@color/dnBlue" />

        <EditText
            android:id="@+id/user_profile_txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/user_profile_txtName"
            android:layout_below="@+id/user_profile_txtName"
            android:layout_marginTop="27dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="LabelFor,TextFields"
            android:backgroundTint="@color/gray"
            android:enabled="false"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/user_profile_txtChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/user_profile_txtEmail"
            android:layout_marginTop="50dp"
            android:text="@string/change_password"
            android:textColor="@color/dnBlue"/>

        <TextView
            android:id="@+id/userRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_profile_txtEmail"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:textColor="@color/dnBlue"/>
    </RelativeLayout>
</RelativeLayout>