<resources>
    <string name="app_name">Digital Nomad</string>

    <string name="sign_up">Dont have an accout? Sign up here!</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="email_email_com">Email</string>
    <string name="pass">Password</string>
    <string name="acc">Make an account</string>
    <item name="visible" type="id" />

    <item name="masked" type="id" />
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">986322564851247</string>
    <string name="fb_login_protocol_scheme">fb986322564851247</string>
...
