<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mihovil.digitalnomad.RegistracijaActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

                <RelativeLayout
                    android:id="@+id/whole_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:translationY="6dp"
                        app:srcCompat="@drawable/acrc"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <LinearLayout
                        android:id="@+id/wholeform"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:paddingBottom="35dp"
                        android:paddingTop="130dp">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/dnBlue">

                            <EditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:layout_weight="1"
                                android:backgroundTint="@color/gray"                                android:ems="10"
                                android:hint="@string/name"
                                android:inputType="textPersonName"
                                tools:ignore="LabelFor,UnusedAttribute" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/dnBlue">

                            <EditText
                                android:id="@+id/lastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignStart="@+id/name"
                                android:layout_below="@+id/name"
                                android:layout_marginTop="10dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/gray"                                android:ems="10"
                                android:hint="@string/lastname"
                                android:inputType="textPersonName"
                                tools:ignore="LabelFor,UnusedAttribute" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/dnBlue">

                            <EditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignEnd="@+id/lastName"
                                android:layout_below="@+id/lastName"
                                android:layout_marginTop="10dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/gray"                                android:ems="10"
                                android:hint="@string/email_email_com"
                                android:inputType="textEmailAddress"
                                tools:ignore="LabelFor,UnusedAttribute" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/dnBlue">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignEnd="@+id/email"
                                android:layout_below="@+id/email"
                                android:layout_marginTop="10dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/gray"                                android:ems="10"
                                android:hint="@string/pass"
                                android:inputType="textPassword"
                                tools:ignore="LabelFor,UnusedAttribute" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/dnBlue">

                            <EditText
                                android:id="@+id/passwordcheck"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignEnd="@+id/password"
                                android:layout_below="@+id/password"
                                android:layout_marginTop="10dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/gray"                                android:ems="10"
                                android:hint="@string/repeat_password"
                                android:inputType="textPassword"
                                tools:ignore="LabelFor,UnusedAttribute" />
                        </android.support.design.widget.TextInputLayout>
                        <Button
                            android:id="@+id/registracija"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="20dp"
                            android:background="@color/dnBlue"
                            android:text="@string/register"
                            android:textColor="#ffffff"/>
                    </LinearLayout>
                </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
