<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_frame"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mihovil.digitalnomad.MainMenuActivity"
    tools:showIn="@layout/app_bar_main_menu">

</android.support.constraint.ConstraintLayout>